# pulsews

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: main.py  test.py
pulsews/: __init__.py  pulse_client.py  pulse_engine.py
pulsews/decorators/: __init__.py
pulsews/definitions/: __init__.py  classes.py  functions.py
tests/: test_should_trigger.py  test_since_decorator.py
